--- a/src/App.css
+++ b/src/App.css
@@ -266,7 +266,7 @@ button {
 }
 
 .navbar i {
-  margin: 0 10px 0;
+  margin: 0 10px 0 0;
   transition: 0.5s;
 }
 
@@ -279,6 +279,7 @@ button {
   color: #fff;
   padding: 0.45rem;
   margin: 0 0.25rem;
+  outline: none;
 }
 
 .navbar a:hover i {
